Table tbl_user {
  id_user serial [pk]
  username text
  email text
  hashed_pass text
  role text
  is_private bool
  date_joined timestamp
  date_updated timestamp
}

Table tbl_friend_request {
  from_id_user serial [pk, ref: > tbl_user.id_user]
  to_id_user serial [pk, ref: > tbl_user.id_user]
  date_sent timestamp
}

Table tbl_game {
  id_game serial [pk]
  start timestamp
  end timestamp
  is_over bool
}

Table tbl_player {
  id_player serial [pk]
  id_game serial [ref: > tbl_game.id_game]
  is_winner bool
}

Table tbl_ai_player {
  id_player serial [pk, ref: > tbl_player.id_player]
  ai_difficuly text [not null]
}

Table tbl_human_player {
  id_player serial [pk, ref: > tbl_player.id_player]
  id_user serial [ref: > tbl_user.id_user]
}

Table tbl_play {
  id_play serial [pk]
  id_player serial [ref: > tbl_player.id_player]
}

Table tbl_tile {
  id_play serial [pk, ref: > tbl_play.id_play]
  pos int [pk]
  letter char
  is_blank bool
}

Table tbl_word {
  id_word serial [pk]
  id_play serial [ref: > tbl_play.id_play]
  score int
  letters text
  new_count int
}

Table tbl_password_reset {
  id_user serial [pk, ref: > tbl_user.id_user]
  secret_hex TEXT
  valid_until timestamp
}
